Cover video support (#296)
* Preload both categories kind

This avoid double fetching at startup and flickering when segmented changes, the drawback is a bit of overloading, but it's acceptable on an edition screen

* Add QRcode on preview in CoverEditionScreen

* Remove unused property in CoverModels

* Cover Video support

* Fix tests

* fix mime type in PostCreationScreen

* Address PR feedbacks

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -555,6 +555,10 @@
     "defaultMessage": "Password should contain at least 8 characters, a number, an uppercase letter and a lowercase letter",
     "description": "Signup Screen - error message when password is not compliant with our rules"
   },
+  "d3lnBJ": {
+    "defaultMessage": "Adjust your video",
+    "description": "Cover edition video crop step header title"
+  },
   "dF52vj": {
     "defaultMessage": "Highlights",
     "description": "Highlights image edition parameters name"
