Cover edition video fix (#316)
* Remove sound when exporting cover edition video

* Fix image inversion

* Inverse crop y #190

* CoverEdition screen fixed layout

* FallbackScreen during animation for CoverEdition

* Fix tests

* Add custom hash value for GPULayerSource

CMTime is not hashable for IOS < 16

* Fix cropData in video mode

* don't show CoverEditonScreen until ready

* Remove inverseY

It was only there because of the cropper inversed Y

* Fix warning

* Dispatch onCoverPreviewReady if there is no Media

* Dispatch onReady only when the models are loaded

* Fix layout

* Handle errors

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -239,6 +239,10 @@
     "defaultMessage": "Select a calling code or email",
     "description": "The accessibility label for the country selector"
   },
+  "ElE0Uo": {
+    "defaultMessage": "Retry",
+    "description": "CoverEditionScreen alert message loading error retry button"
+  },
   "F1nOOr": {
     "defaultMessage": "Color",
     "description": "Label of the color button in cover edition"
@@ -342,6 +346,10 @@
   "Mlk+KE": {
     "defaultMessage": "Activity",
     "description": "NewProfile Name Company Screen - Label Activity textinput"
+  },
+  "MuonO2": {
+    "defaultMessage": "Loading error",
+    "description": "CoverEditionScreen alert message loading error title"
   },
   "NJSilL": {
     "defaultMessage": "Text",
@@ -550,6 +558,10 @@
   "calqIB": {
     "defaultMessage": "Connect with phone number",
     "description": "Signup Form Connect with phone number section title in country selection list"
+  },
+  "cvIa5m": {
+    "defaultMessage": "Cancel",
+    "description": "CoverEditionScreen alert message loading error cancel button"
   },
   "d3LNTq": {
     "defaultMessage": "Password should contain at least 8 characters, a number, an uppercase letter and a lowercase letter",
@@ -854,6 +866,10 @@
   "rKml3z": {
     "defaultMessage": "Allow Azzapp to access your camera and your microphone",
     "description": "Camera authorization screen title for camera permission"
+  },
+  "rbuw1H": {
+    "defaultMessage": "Could not load the cover edition screen",
+    "description": "CoverEditionScreen alert message loading error text"
   },
   "rfiLII": {
     "defaultMessage": "Connect with email address",
