Add screen prefetching (#346)
* Add screen prefetching, fix #220, fix #336

* fix tests

* Local media cache #328

---------

Co-authored-by: fahbe <shecart.mydev@gmail.com>

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -35,6 +35,10 @@
     "defaultMessage": "Forgot your password?",
     "description": "SigninScreen - Forgot your password?"
   },
+  "3+i2KR": {
+    "defaultMessage": "Category image",
+    "description": "ProfileKindStep - Category image alt"
+  },
   "428m8h": {
     "defaultMessage": "Add a color",
     "description": "ColorPicker component title when adding a color"
