feat(account): screen switch profile (#368)
* feat(account): #265 add webcard

* feat(account): #265 add webcard

* feat(account): #265 plug profile creation & switch user profile

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -431,6 +431,10 @@
     "defaultMessage": "Hex",
     "description": "HexColorTextInput Component Hex Title"
   },
+  "Slf0gz": {
+    "defaultMessage": "Create a new profile",
+    "description": "Start new profile creation from account screen"
+  },
   "SmWLhs": {
     "defaultMessage": "Trending posts",
     "description": "SearchPage - Trending posts title"
